# NAIVI

./: .gitignore  README  pyproject.toml  requirements.txt  single_experiment.py
NAIVI/: __init__.py
NAIVI_blogcatalog/: load_data.py
NAIVI_experiments/: display.py  gen_data_mnar.py  main.py  post_processing.py  results.py  run.py
NAIVI_facebook/: main.py  post_processing.py  run.py
NNVI/: __init__.py
experiments/: facebook_degree_distribution.py  plot_binary_synthetic.py  plot_binary_synthetic_cpu.py  plot_binary_synthetic_old.py  plot_continuous_synthetic.py  plot_semi_supervised.py  ss_degree_distribution.py  ss_selection.py  ss_selection2.py
facebook/: data.py  ego_plot.py  graph.py  job.py  job_Ksimple.py  job_Ksmooth.py  job_simple.py  job_smoothing.py  k_plot.py  main.py  output.py  positions.py  post_precessing.py  result_graph.py  results.py  run.py  test_job.py
facebook_mnar/: run.py
pypet_experiments/: __init__.py  data.py  example.py  facebook.py  gather.py  method.py  method_output.py  metrics.py  results.py  run.py  utils.py
scratches/: commands  experiment.py  factors.py  gaussian.py  gcn.py  initialization.py  joint_model.py  joint_model2.py  logistic.py  mcmc.py  model.py  product_factor.py  pypet_experiments.py  pypet_tests.py  quadratic_bound.py  sandbox.py  sequential_updates.py  variational.py
sims/: graphs.py  graphs_poster.py  main.py  post_precessing.py  run.py
sims_convergence/: analysis.py  job.py  main.py  optimizer.py  post_processing.py  run.py
sims_facebook/: dimension.py  dimension.sh  other_methods.py
(+474 files in other folders)
